--- a/assents/style.css
+++ b/assents/style.css
@@ -2,5 +2,36 @@
 
 *{
     padding: 0px;
-    margin: 0 auto;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html body{
+    height: 100vh;
+    width: 100vw;
+    
+}
+
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#telefone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    height: 627px;
+    width: 311px;
+    background: url(../imagens/frame-iphone.png) no-repeat;
+    
 }
